--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   appwrite: ^9.0.0
   flutter_svg: ^2.0.5
+  flutter_riverpod: ^2.3.5
 
 dev_dependencies:
   flutter_test:
