--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   appwrite: ^9.0.0
   flutter_svg: ^2.0.5
   flutter_riverpod: ^2.3.5
+  fpdart: ^0.5.0
 
 dev_dependencies:
   flutter_test:
