--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_svg: ^2.0.5
   flutter_riverpod: ^2.3.5
   fpdart: ^0.5.0
+  image_picker: ^0.8.7+4
 
 dev_dependencies:
   flutter_test:
