--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_riverpod: ^2.3.5
   fpdart: ^0.5.0
   image_picker: ^0.8.7+4
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
