--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   fpdart: ^0.5.0
   image_picker: ^0.8.7+4
   carousel_slider: ^4.2.1
+  timeago: ^3.4.0
 
 dev_dependencies:
   flutter_test:
