--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   image_picker: ^0.8.7+4
   carousel_slider: ^4.2.1
   timeago: ^3.4.0
+  any_link_preview: ^3.0.0
 
 dev_dependencies:
   flutter_test:
